project(pnl_calculator)

cmake_minimum_required(VERSION 3.12)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2")

add_executable(pnl_calculator 
    src/main.cpp 
    src/PnLCalculator.cpp
)

target_include_directories(pnl_calculator PRIVATE include)